--- a/Printer backup updated with AMS/Printer backup updated with AMS/Printer backup updated/Printer Backup/config/macros.cfg
+++ b/Printer backup updated with AMS/Printer backup updated with AMS/Printer backup updated/Printer Backup/config/macros.cfg
@@ -265,7 +265,7 @@ gcode:
     MOVE_TO_PURGE_AREA          
 
     # 5. Load and Big Purge (Uses the tool passed from slicer)
-    MMU_CALC_PURGE_VOLUMES MIN=200 MAX=205
+    MMU_CALC_PURGE_VOLUMES MIN=200 MAX=210
     MMU_START_LOAD_INITIAL_TOOL 
 
     # 6. Final Clean up
@@ -279,6 +279,10 @@ gcode:
     LINE_PURGE
     M117 Printing...
 
+# ##########################################################################
+# END PRINT MACRO
+# ##########################################################################
+
 [gcode_macro _END_PRINT_SOUND]
 gcode:
     RUN_SHELL_COMMAND CMD=play_done
@@ -286,31 +290,30 @@ gcode:
 [gcode_macro _END_PRINT]
 description: Actions to take when a print is finished
 gcode:
+    # 1. Sound Notification
     _END_PRINT_SOUND
-    
-    # 1. UNLOAD TO PARKING POSITION (SPLITTER)
-    # This uses the CUT_FILAMENT macro and moves back to your parking distance.
-    RESPOND MSG="Unloading filament to splitter..."
-    MMU_UNLOAD
 
+    # 2. Calculate and Execute Immediate Safety Z-Lift
     {% set max_z = printer.toolhead.axis_maximum.z|float %}
     {% set current_z = printer.toolhead.position.z|float %}
     {% set actual_lift_amount = [20.0, max_z - current_z]|min %}
     {% set actual_lift_amount = [5.0, actual_lift_amount]|max %}
   
-    # 2. COOL DOWN AFTER UNLOAD
-    TURN_OFF_HEATERS
-    
-    G91
-    G1 Z5 F6000
-    G0 Z{actual_lift_amount} F1200
-    G90
+    G91                             ; Set to Relative positioning
+    G1 Z5 F6000                     ; Quick initial hop
+    G0 Z{actual_lift_amount} F1200  ; Controlled lift to safe height
+    G90                             ; Return to Absolute positioning
 
-    # 3. CLEANUP MOVES
-    MOVE_TO_PURGE_AREA
-    M107                ; Turn off part cooling fan
-    M84                 ; Disable steppers (DO THIS LAST)
-    RESPOND MSG="Print Finish"
+    # 3. Unload Filament (Triggers MOVE_TO_PURGE_AREA automatically)
+    RESPOND MSG="Unloading filament..."
+    MMU_UNLOAD
+
+    # 4. Shutdown and Cooldown
+    TURN_OFF_HEATERS                ; Turn off hotend and bed
+    M107                            ; Turn off part cooling fan
+    M84                             ; Disable steppers
+    
+    RESPOND MSG="Print Finished"
     M117 Print done
 
 [gcode_macro CANCEL_PRINT]
