--- a/Printer backup updated with AMS/Printer backup updated with AMS/Printer backup updated/Printer Backup/config/shell_command.cfg
+++ b/Printer backup updated with AMS/Printer backup updated with AMS/Printer backup updated/Printer Backup/config/shell_command.cfg
@@ -2,3 +2,14 @@
 command: bash /home/admin/set_camera.sh
 timeout: 2.
 verbose: True
+
+[gcode_shell_command fix_obico_script]
+command: bash /home/admin/fix_obico.sh
+timeout: 90.0
+verbose: True
+
+[gcode_macro FIX_OBICO]
+description: Clears Obico cache and restarts web server
+gcode:
+    {action_respond_info("Repairing Obico... please wait 30 seconds.")}
+    RUN_SHELL_COMMAND CMD=fix_obico_script
