Add filament change macro M600 to macros.cfg
Added 
 
[gcode_macro M600]
rename_existing: M600.1
gcode:
    _M600

--- a/Updated Printer backup/config/macros.cfg
+++ b/Updated Printer backup/config/macros.cfg
@@ -394,6 +394,11 @@ gcode:
     RESTORE_GCODE_STATE NAME=PAUSE_state MOVE=1 MOVE_SPEED=100
     BASE_RESUME
 
+[gcode_macro M600]
+rename_existing: M600.1
+gcode:
+    _M600
+
 [gcode_macro _M600]
 description: Hidden filament change macro
 gcode:
